Convert Spock test to JUnit 5
And remove Spock and Groovy.